--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^17.0.2",
     "react-dropdown": "^1.9.2",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.14.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "semantic-ui-css": "^2.4.1",
