--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,5 +9,6 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=mhbuilder.db"
   },
+  "TokenKey":"super secret key",
   "AllowedHosts": "*"
 }
