--- a/webapp/package.json
+++ b/webapp/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "emailjs-com": "^3.1.0",
     "formik": "^2.2.9",
     "install": "^0.13.0",
     "npm": "^7.11.1",
