--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,7 @@
         }
     },
     "ConnectionStrings": {
-        "DefaultConnection": "Server=localhost; Port=5432; User Id=admin; Password=T{:Fn95*{,e$:W@.; Database=MHRiseBuilder"
+        "DefaultConnection": "Server=localhost; Port=5432; User Id=admin; Password=secret; Database=MHRiseBuilder"
     },
     "TokenKey": ";,u3+4v$Y-<Rxbp-",
     "AllowedHosts": "*"
